k8s/client.example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: testing1avala/devops-frontend:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort # Expose Frontend to Browser
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
