k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          # REPLACE WITH YOUR DOCKER HUB USERNAME
          image: testing1avala/devops-backend:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
